Refactor file log